load("//bzl:rules.bzl",
     "boot_archive",
     "boot_library",
     "build_module",
     "build_tool",
     "compiler_module",
     "compiler_signature",
)
load("//lex:BUILD_RULES.bzl", "lex")

load("//config:CONFIG.bzl", "w")

## make log: >vm uses -use-prims, >sys does not
# ./boot/ocamlrun ./boot/ocamlc
# -nostdlib -use-prims -g -strict-sequence -principal -absname -w +a-4-9-40-41-42-44-45-48 -warn-error +a -bin-annot -strict-formats

# ./boot/ocamlrun ./ocamlopt
# -nostdlib -g -strict-sequence -principal -absname -w +a-4-9-40-41-42-44-45-48 -warn-error +a -bin-annot -strict-formats


## warnings
NAME_OUT_OF_SCOPE = "40"

MODULE_OPTS = []
SIG_OPTS    = ["-strict-formats"]

## dev/test target, builds everything
boot_archive(
    name = "asmcomp",
    manifest  = [
        ":Afl_instrument",
        ":Asmgen",
        ":Asmlibrarian",
        ":Asmlink",
        ":Asmpackager",
        ":Branch_relaxation",
        # ":Branch_relaxation_intf_cmi",
        ":Cmm",
        ":Cmm_helpers",
        ":Cmm_invariants",
        ":Cmmgen",
        ":Cmmgen_state",
        ":Coloring",
        ":Comballoc",
        ":CSEgen",
        ":Dataflow",
        ":Deadcode",
        ":Emitaux",
        ":Interf",
        ":Interval",
        ":Linear",
        ":Linearize",
        ":Linscan",
        ":Liveness",
        ":Mach",
        ":Polling",
        ":Printcmm",
        ":Printlinear",
        ":Printmach",
        ":Reg",
        ":Reloadgen",
        ":Schedgen",
        ":Selectgen",
        ":Spill",
        ":Split",
        ":Strmatch",

        ## arch-dependent configured deps:
        "CSE", "Arch", "Emit", "Proc", "Reload", "Scheduling", "Selection"

    ] + select(
        {
        # "//config/arch:x86_64":
        "@platforms//cpu:x86_64":
        [":X86_dsl", ":X86_gas", ":X86_masm", ":X86_proc"],
        # "//config/arch:amd64":
        # [":X86_dsl", ":X86_gas", ":X86_masm", ":X86_proc"],
        # "//config/arch:i386":
        "@platforms//cpu:i386":
        ["X86_dsl", ":X86_gas", ":X86_masm", ":X86_proc"],
    }, no_match_error = "Unsupported arch"),

    # signatures  = [
    #     ":Emitenv_cmi",
    #     ":X86_ast_cmi",
    # ],
    visibility = ["//testsuite:__pkg__"],
)

# boot_archive(
boot_library(
    name = "optcomp",
    visibility = [
        "//compilerlibs:__pkg__",
        "//testsuite:__pkg__",
    ],
    manifest  = [
        ":Afl_instrument",
        ":Asmgen",
        ":Asmlibrarian",
        ":Asmlink",
        ":Asmpackager",
        ":Branch_relaxation",
        # ":Branch_relaxation_intf_cmi",
        ":Cmm",
        ":Cmm_helpers",
        ":Cmm_invariants",
        ":Cmmgen",
        ":Cmmgen_state",
        ":Coloring",
        ":Comballoc",
        ":CSEgen",
        ":Dataflow",
        ":Deadcode",
        ":Emitaux",
        ":Interf",
        ":Interval",
        ":Linear",
        ":Linearize",
        ":Linscan",
        ":Liveness",
        ":Mach",
        ":Polling",
        ":Printcmm",
        ":Printlinear",
        ":Printmach",
        ":Reg",
        ":Reloadgen",
        ":Schedgen",
        ":Selectgen",
        ":Spill",
        ":Split",
        ":Strmatch",

        "//file_formats:Linear_format",
        "//driver:Opterrors",
        "//driver:Optcompile",
        "//driver:Optmaindriver",

        ## arch-dependent configured deps:
        ":Arch",
        ":CSE",
        ":Emit",
        ":Proc",
        ":Reload",
        ":Scheduling",
        ":Selection"
    ] + select(
        # $(ARCH_SPECIFIC_ASMCOMP) = INTEL_ASM = x86_[proc,dsl,gas,masm]
        {
        "//config/arch:x86_64":
        [":X86_dsl", ":X86_gas", ":X86_masm", ":X86_proc"],
        "//config/arch:i386":
        ["X86_dsl", ":X86_gas", ":X86_masm", ":X86_proc"],
    }, no_match_error = "Unsupported arch"),
)

## compilerlibs/Makefile.compilerlibs:
# INTEL_ASM = \
#   asmcomp/x86_proc.cmo \
#   asmcomp/x86_dsl.cmo \
#   asmcomp/x86_gas.cmo \
#   asmcomp/x86_masm.cmo
# INTEL_ASM_CMI = \
#   asmcomp/x86_ast.cmi
# ARCH_SPECIFIC_ASMCOMP =
# ARCH_SPECIFIC_ASMCOMP_CMI =
# ifeq ($(ARCH),i386)
# ARCH_SPECIFIC_ASMCOMP = $(INTEL_ASM)
# ARCH_SPECIFIC_ASMCOMP_CMI = $(INTEL_ASM_CMI)
# endif
# ifeq ($(ARCH),amd64)
# ARCH_SPECIFIC_ASMCOMP = $(INTEL_ASM)
# ARCH_SPECIFIC_ASMCOMP_CMI = $(INTEL_ASM_CMI)
# endif
# ASMCOMP = \
#   $(ARCH_SPECIFIC_ASMCOMP) \
#   asmcomp/arch.cmo \
#   ...
# ASMCOMP_CMI = $(ARCH_SPECIFIC_ASMCOMP_CMI)


################################################################
compiler_module(
    name   = "CSE",
    struct = select({
        ## FIXME: select on xtarget or target host
        # "//platform/target:x86_64": "//asmcomp/amd64:CSE.ml",
        # "//platform/xtarget:x86_64": "//asmcomp/amd64:CSE.ml",
        # "//config/arch:x86_64": "//asmcomp/amd64:CSE.ml",

        "@platforms//cpu:x86_64": "//asmcomp/amd64:CSE.ml",
        "//config/arch:arm"   : "//asmcomp/arm:CSE.ml",
        "//config/arch:arm64"   : "//asmcomp/arm64:CSE.ml",
        "//config/arch:i386"   : "//asmcomp/i386:CSE.ml",
        "//config/arch:ppc"   : "//asmcomp/power:CSE.ml",
        "//config/arch:riscv64"   : "//asmcomp/riscv:CSE.ml",
        "//config/arch:s390x"   : "//asmcomp/s390x:CSE.ml",
    }, no_match_error = "unknown arch"),
    opts = MODULE_OPTS,
    warnings = [w.MISSING_MLI, w.NAME_OUT_OF_SCOPE],
    deps   = [
        ":Cmm",
        ":CSEgen",
        ":Mach",
    ],
)

compiler_module(
    name   = "CSEgen",
    struct = "CSEgen.ml",
    sig    = "CSEgen_cmi",
    opts = MODULE_OPTS,
    warnings = [NAME_OUT_OF_SCOPE],
    deps   = [
        ":Cmm",
        ":Mach",
        ":Proc",
        ":Reg",
        "//stdlib:Stdlib.Map",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Array",
        "//stdlib:CamlinternalOO"
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "CSEgen_cmi",
    src  = "CSEgen.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Mach_cmi",
        ":Cmm_cmi",
        "//parsing:Asttypes_cmi",
    ],
)

compiler_module(
    name   = "Afl_instrument",
    struct = "afl_instrument.ml",
    sig    = "Afl_instrument_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//lambda:Lambda",
        # "//middle_end:Backend_var",
        #FIXME: bug in deps mgmt, import archive containing Backend_var
        "//middle_end:ocamlmiddleend",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Random",
        "//utils:Clflags",
        ":Cmm",
    ],
)

compiler_signature(
    name = "Afl_instrument_cmi",
    src  = "afl_instrument.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        "//lambda:Debuginfo_cmi",
        "//parsing:Asttypes_cmi",
    ],
)

compiler_module(
    name   = "Arch",
    sig    = ":Arch_cmi",
    struct = select({
        "//config/arch:x86_64": "//asmcomp/amd64:arch.ml",
        "//config/arch:arm"   : "//asmcomp/arm:arch.ml",
        "//config/arch:arm64"   : "//asmcomp/arm64:arch.ml",
        "//config/arch:i386"   : "//asmcomp/i386:arch.ml",
        "//config/arch:ppc"   : "//asmcomp/power:arch.ml",
        "//config/arch:riscv64"   : "//asmcomp/riscv:arch.ml",
        "//config/arch:s390x"   : "//asmcomp/s390x:arch.ml",
    }, no_match_error = "unknown arch"),
    opts = MODULE_OPTS,
    warnings = [w.MISSING_MLI],
    deps   = [
        "//utils:Clflags"
    ],
)

compiler_signature(
    name   = "Arch_cmi",
    src = select({
        "//config/arch:x86_64": "//asmcomp/amd64:arch.mli",
        "//config/arch:arm"   : "//asmcomp/arm:arch.mli",
        "//config/arch:arm64"   : "//asmcomp/arm64:arch.mli",
        "//config/arch:i386"   : "//asmcomp/i386:arch.mli",
        "//config/arch:ppc"   : "//asmcomp/power:arch.mli",
        "//config/arch:riscv64"   : "//asmcomp/riscv:arch.mli",
        "//config/arch:s390x"   : "//asmcomp/s390x:arch.mli",
    }, no_match_error = "unknown arch"),
    deps   = [
        "//stdlib:Stdlib.Arg_cmi",
        "//stdlib:Stdlib.Format_cmi"
    ],
)

compiler_module(
    name   = "Asmgen",
    struct = "asmgen.ml",
    sig    = "Asmgen_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Split",
        ":Spill",
        ":Reg",
        ":Printmach",
        ":Printlinear",
        ":Printcmm",
        ":Polling",
        ":Mach",
        ":Liveness",
        ":Linscan",
        ":Linearize",
        ":Linear",
        ":Interval",
        ":Interf",
        ":Emitaux",
        ":Deadcode",
        ":Comballoc",
        ":Coloring",
        ":Cmmgen",
        ":Cmm_invariants",
        ":Cmm_helpers",
        ":Cmm",
        "//lambda:Translmod",
        "//utils:Profile",
        "//typing:Primitive",
        "//utils:Misc",
        "//parsing:Location",
        "//file_formats:Linear_format",
        "//typing:Ident",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Filename",
        "//config:Config",
        ## (Compiler_pass)
        "//middle_end:Compilenv",
        "//utils:Clflags",
        "//middle_end:Clambda",

        # arch-dependent targets
        ":CSE", ":Emit", ":Reload", ":Scheduling", ":Selection"
    ],
    visibility = ["//driver:__pkg__"]
)

compiler_signature(
    name = "Asmgen_cmi",
    src  = "asmgen.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Emitaux_cmi",
        ":Cmm_cmi",
        "//stdlib:Stdlib.Format_cmi",
        "//middle_end:Clambda_cmi",
        "//middle_end:Backend_intf_cmi"
    ],
)

compiler_module(
    name   = "Asmlibrarian",
    struct = "asmlibrarian.ml",
    sig    = "Asmlibrarian_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Asmlink",
        "//utils:Misc",
        "//parsing:Location",
        "//utils:Load_path",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Filename",
        "//middle_end/flambda:Export_info",
        "//config:Config",
        "//middle_end:Compilenv",
        "//utils:Clflags",
        "//middle_end:Clambda",
        ## (Ccomp)
    ],
    visibility = ["//driver:__pkg__"]
)

compiler_signature(
    name = "Asmlibrarian_cmi",
    src  = "asmlibrarian.mli",
    opts = SIG_OPTS,
    deps   = [
        "//file_formats:Cmx_format_cmi",
        "//stdlib:Stdlib.Format_cmi",
    ],
)

compiler_module(
    name   = "Asmlink",
    struct = "asmlink.ml",
    sig    = "Asmlink_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Emitaux",
        ":Emit",
        ":Cmm_helpers",
        ":Cmm",
        ":Asmgen",
        "//stdlib:Stdlib.Sys",
        "//lambda:Runtimedef",
        "//utils:Profile",
        "//stdlib:Stdlib.Printf",
        "//utils:Misc",
        "//parsing:Location",
        "//utils:Load_path",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Digest",
        ## (Consistbl)
        "//config:Config",
        "//middle_end:Compilenv",
        "//utils:Clflags",
        "//middle_end:Clambda",
        ## (Ccomp)
        "//stdlib:Stdlib.Array",
    ],
)

compiler_signature(
    name = "Asmlink_cmi",
    src  = "asmlink.mli",
    opts = SIG_OPTS,
    deps   = [
        "//file_formats:Cmx_format_cmi",
        "//middle_end:Backend_intf_cmi",
        "//stdlib:Stdlib.Digest_cmi",
        "//stdlib:Stdlib.Format_cmi",
        "//utils:Misc_cmi",
    ],
)

compiler_module(
    name   = "Asmpackager",
    struct = "asmpackager.ml",
    sig    = "Asmpackager_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Asmlink",
        ":Asmgen",
        "//typing:Typemod",
        "//lambda:Translmod",
        "//stdlib:Stdlib.String",
        "//lambda:Simplif",
        "//utils:Profile",
        "//stdlib:Stdlib.Printf",
        "//utils:Misc",
        "//parsing:Location",
        "//utils:Load_path",
        "//stdlib:Stdlib.List",
        "//typing:Ident",
        "//stdlib:Stdlib.Format",
        "//middle_end/flambda:Flambda_middle_end",
        "//stdlib:Stdlib.Filename",
        "//middle_end/flambda:Export_info_for_pack",
        "//middle_end/flambda:Export_info",
        "//typing:Env",
        "//config:Config",
        "//middle_end:Compilenv",
        "//middle_end:Compilation_unit",
        "//middle_end/closure:Closure_middle_end",
        "//utils:Clflags",
        "//middle_end:Clambda",
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//driver:__pkg__"
    ]
)

compiler_signature(
    name = "Asmpackager_cmi",
    src  = "asmpackager.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
        "//typing:Env_cmi",
        "//file_formats:Cmx_format_cmi",
        "//middle_end:Backend_intf_cmi",
    ],
)

compiler_module(
    name   = "Branch_relaxation",
    struct = "branch_relaxation.ml",
    sig    = "Branch_relaxation_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Mach",
        ":Linear",
        ":Cmm",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "Branch_relaxation_cmi",
    src  = "branch_relaxation.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Linear_cmi",
        ":Branch_relaxation_intf_cmi",
    ],
)

compiler_signature(
    name = "Branch_relaxation_intf_cmi",
    src  = "branch_relaxation_intf.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Linear_cmi",
        ":Cmm_cmi",
    ],
)

# compiler_module(
#     name   = "Branch_relaxation_intf",
#     struct = "branch_relaxation_intf.ml",
#     opts = MODULE_OPTS,
#     deps   = [
#         ":Linear",
#         ":Cmm",
#         "//lambda:Debuginfo",
#         ## (Arch)
#     ],
# # )

compiler_module(
    name   = "Cmm",
    struct = "cmm.ml",
    sig    = "Cmm_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//lambda:Lambda",
        ":Arch",
        "//utils:Targetint",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        "//lambda:Debuginfo",
        "//middle_end:Backend_var",
        "//stdlib:Stdlib.Array",
    ],
    visibility = [
        "//asmcomp:__subpackages__",
        "//file_formats:__pkg__"
    ]
)

compiler_signature(
    name = "Cmm_cmi",
    src  = "cmm.mli",
    opts = SIG_OPTS,
    deps   = [
        "//lambda:Lambda_cmi",
        "//utils:Targetint_cmi",
        "//lambda:Debuginfo_cmi",
        "//middle_end:Backend_var_cmi",
        "//parsing:Asttypes_cmi",
    ],
    visibility = [
        "//file_formats:__pkg__",
    ]
)

compiler_module(
    name   = "Cmm_helpers",
    struct = "cmm_helpers.ml",
    sig    = "Cmm_helpers_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Strmatch",
        ":Proc",
        ":Cmmgen_state",
        ":Cmm",
        ## (Targetint)
        ## (Switch)
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Printf",
        "//typing:Primitive",
        "//stdlib:Stdlib.Obj",
        "//utils:Numbers",
        "//stdlib:Stdlib.Nativeint",
        "//utils:Misc",
        "//stdlib:Stdlib.Marshal",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.Int",
        "//lambda:Debuginfo",
        "//config:Config",
        "//middle_end:Compilenv",
        "//utils:Clflags",
        ## (Clambda_primitives)
        "//middle_end:Clambda",
        "//middle_end:Backend_var",
        "//stdlib:Stdlib.Array",
        ## (Arch)
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
)

compiler_signature(
    name = "Cmm_helpers_cmi",
    src  = "cmm_helpers.mli",
    opts = SIG_OPTS,
    deps   = [
        "//file_formats:Cmx_format_cmi",
        "//file_formats:Cmxs_format_cmi",
        "//lambda:Debuginfo_cmi",
        "//middle_end:Clambda_cmi",
        "//parsing:Asttypes_cmi",
        "//stdlib:Stdlib.Digest_cmi",
        "//stdlib:Stdlib.Nativeint_cmi",
        "//typing:Primitive_cmi",
        ":Cmm_cmi",
        ":Cmmgen_state_cmi",
    ],
)

compiler_module(
    name   = "Cmm_invariants",
    struct = "cmm_invariants.ml",
    sig    = "Cmm_invariants_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Cmm",
        "//stdlib:Stdlib.Set",
        "//utils:Numbers",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Array",
    ],
)

compiler_signature(
    name = "Cmm_invariants_cmi",
    src  = "cmm_invariants.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        "//stdlib:Stdlib.Format_cmi",
    ],
)

compiler_module(
    name   = "Cmmgen",
    struct = "cmmgen.ml",
    sig    = "Cmmgen_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//lambda:Debuginfo",
        "//middle_end:Clambda",
        "//middle_end:Compilenv",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Map",
        "//stdlib:Stdlib.Nativeint",
        "//stdlib:Stdlib.Obj",
        "//stdlib:Stdlib.Option",
        "//typing:Primitive",
        "//typing:Types",
        "//utils:Clflags",
        "//config:Config",
        "//utils:Misc",
        ":Afl_instrument",
        ":Cmm",
        ":Cmm_helpers",
        ":Cmmgen_state",
        ":Arch",
        "//middle_end:Backend_var",
    ],
)

compiler_signature(
    name = "Cmmgen_cmi",
    src  = "cmmgen.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        "//parsing:Asttypes_cmi",
        "//middle_end:Clambda_cmi",
    ],
)

compiler_module(
    name   = "Cmmgen_state",
    struct = "cmmgen_state.ml",
    sig    = "Cmmgen_state_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Cmm",
        "//stdlib:Stdlib.Queue",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Hashtbl",
        "//middle_end:Compilenv",
        "//middle_end:Clambda",
    ],
)

compiler_signature(
    name = "Cmmgen_state_cmi",
    src  = "cmmgen_state.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        "//utils:Misc_cmi",
        "//middle_end:Clambda_cmi"
    ],
)

compiler_module(
    name   = "Coloring",
    struct = "coloring.ml",
    sig    = "Coloring_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Reg",
        ":Proc",
        "//stdlib:Stdlib.Set",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Array",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
)

compiler_signature(
    name = "Coloring_cmi",
    src  = "coloring.mli",
    opts = SIG_OPTS + ["-nopervasives"],
)

compiler_module(
    name   = "Comballoc",
    struct = "comballoc.ml",
    sig    = "Comballoc_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Reg",
        ":Mach",
        "//stdlib:Stdlib.List",
        "//lambda:Debuginfo",
        "//config:Config",
        "//stdlib:Stdlib.Array",
        ## (Arch)
    ],
)

compiler_signature(
    name = "Comballoc_cmi",
    src  = "comballoc.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Mach_cmi",
        ":Cmm_cmi",
    ],
)

################################################################
# The preprocessor for asm generators
# cvt_emit := cvt_emit$(EXE)
# $(eval $(call PROGRAM_SYNONYM,cvt_emit))
# $(cvt_emit): cvt_emit.cmo
# 	$(CAMLC) $(LINKFLAGS) -o $@ $^

##FIXME: this should only be built as a vm executable and run once
# ocaml_tool(
build_tool(
    name = "cvt_emit",
    main = ":Cvt_emit",
    opts = [
        "-nostdlib",
        "-verbose"
    ],
    # exec_compatible_with   = [
    #     # "//platform/constraints/ocaml/build/executor:vm_executor",
    #     "//config/target/executor:vm_executor?"
    # ],
    visibility = ["//asmcomp:__subpackages__"]
)

build_module(
    name   = "Cvt_emit",
    struct = "cvt_emit_ml",
    opts = MODULE_OPTS,
    warnings = [w.MISSING_MLI],
    deps   = [
        "//stdlib:Stdlib.Lexing",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Sys",
        "//bytecomp:Bytesections",
        "//stdlib:Stdlib.Array",
    ],
)

lex(
    name = "cvt_emit_ml",
    src  = "cvt_emit.mll",
    out  = "cvt_emit.ml"
)

compiler_module(
    name   = "Dataflow",
    struct = "dataflow.ml",
    sig    = "Dataflow_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Mach",
        ":Cmm",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Array",
    ],
)

compiler_signature(
    name = "Dataflow_cmi",
    src  = "dataflow.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Mach_cmi",
        ":Cmm_cmi",
    ],
)

compiler_module(
    name   = "Deadcode",
    struct = "deadcode.ml",
    sig    = "Deadcode_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Reg",
        ":Proc",
        ":Mach",
        ":Cmm",
        "//utils:Numbers",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Array",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
)

compiler_signature(
    name = "Deadcode_cmi",
    src  = "deadcode.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Mach_cmi",
        ":Cmm_cmi",
    ],
)

# asmcomp/emit.ml: asmcomp/$(ARCH)/emit.mlp $(cvt_emit)
# 	echo \# 1 \"$(ARCH)/emit.mlp\" > $@
# 	$(OCAMLRUN) $(cvt_emit) < $< >> $@ \
# 	|| { rm -f $@; exit 2; }

compiler_module(
    name   = "Emit",
    struct = select({
        "//config/arch:x86_64": "//asmcomp/amd64:emit.ml",
        "//config/arch:arm"   : "//asmcomp/arm:emit.ml",
        "//config/arch:arm64"   : "//asmcomp/arm64:emit.ml",
        "//config/arch:i386"   : "//asmcomp/i386:emit.ml",
        "//config/arch:ppc"   : "//asmcomp/power:emit.ml",
        "//config/arch:riscv64"   : "//asmcomp/riscv:emit.ml",
        "//config/arch:s390x"   : "//asmcomp/s390x:emit.ml",
    }, no_match_error = "unknown arch"),
    sig = "Emit_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Proc",
        ":Branch_relaxation",
        ":Emitaux",
        ":X86_dsl",
        ":X86_gas",
        ":X86_masm",
        "//middle_end:Compilenv",
        "//utils:Domainstate"
    ],
)

compiler_signature(
    name = "Emit_cmi",
    src  = "emit.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Linear_cmi",
        ":Cmm_cmi",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_module(
    name   = "Emitaux",
    struct = "emitaux.ml",
    sig    = "Emitaux_cmi",
    opts = MODULE_OPTS,
    warnings = [NAME_OUT_OF_SCOPE],
    deps   = [
        "//lambda:Debuginfo",
        "//stdlib:Stdlib.Char",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Int32",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Nativeint",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.String",
        "//utils:Clflags",
        "//config:Config",
        ":Arch",
        ":Cmm",
        ## (Scoped_location)
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "Emitaux_cmi",
    src  = "emitaux.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Linear_cmi",
        ":Emitenv_cmi",
        ":Cmm_cmi",
        "//stdlib:Stdlib.Format_cmi",
        "//lambda:Debuginfo_cmi",
    ],
)

compiler_signature(
    name = "Emitenv_cmi",
    src  = "emitenv.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Linear_cmi",
        ":Cmm_cmi",
    ],
)

compiler_module(
    name   = "Interf",
    struct = "interf.ml",
    sig    = "Interf_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Reg",
        ":Proc",
        ":Mach",
        ":Cmm",
        "//stdlib:Stdlib.Set",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Array",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
)

compiler_signature(
    name = "Interf_cmi",
    src  = "interf.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Mach_cmi",
        ":Cmm_cmi",
    ],
)

compiler_module(
    name   = "Interval",
    struct = "interval.ml",
    sig    = "Interval_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Reg",
        ":Proc",
        ":Mach",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Array",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
)

compiler_signature(
    name = "Interval_cmi",
    src  = "interval.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Reg_cmi",
        ":Mach_cmi",
        ":Cmm_cmi",
    ],
)

compiler_module(
    name   = "Linear",
    struct = "linear.ml",
    sig    = "Linear_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Reg",
        ":Mach",
        ":Cmm",
        "//lambda:Debuginfo",
    ],
    visibility = [
        "//asmcomp:__subpackages__",
        "//file_formats:__subpackages__"
    ]
)

compiler_signature(
    name = "Linear_cmi",
    src  = "linear.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Reg_cmi",
        ":Mach_cmi",
        ":Cmm_cmi",
        "//lambda:Debuginfo_cmi",
    ],
    visibility = ["//file_formats:__pkg__"]
)

compiler_module(
    name   = "Linearize",
    struct = "linearize.ml",
    sig    = "Linearize_cmi",
    opts = MODULE_OPTS,
    warnings = [NAME_OUT_OF_SCOPE],
    deps   = [
        ":Reg",
        ":Proc",
        ":Mach",
        ":Linear",
        ":Cmm",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        "//lambda:Debuginfo",
        "//stdlib:Stdlib.Array",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
)

compiler_signature(
    name = "Linearize_cmi",
    src  = "linearize.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Mach_cmi",
        ":Linear_cmi",
        ":Cmm_cmi",
    ],
)

compiler_module(
    name   = "Linscan",
    struct = "linscan.ml",
    sig    = "Linscan_cmi",
    opts = MODULE_OPTS,
    warnings = [NAME_OUT_OF_SCOPE],
    deps   = [
        ":Reg",
        ":Proc",
        ":Interval",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Array",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
)

compiler_signature(
    name = "Linscan_cmi",
    src  = "linscan.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Interval_cmi"
    ],
)

compiler_module(
    name   = "Liveness",
    struct = "liveness.ml",
    sig    = "Liveness_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Reg",
        ":Proc",
        ":Printmach",
        ":Mach",
        ":Dataflow",
        "//utils:Misc",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
)

compiler_signature(
    name = "Liveness_cmi",
    src  = "liveness.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Mach_cmi",
        ":Cmm_cmi",
    ],
)

compiler_module(
    name   = "Mach",
    struct = "mach.ml",
    sig    = "Mach_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Reg",
    ],
)

compiler_signature(
    name = "Mach_cmi",
    src  = "mach.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Arch_cmi",
        ":Reg_cmi",
    ],
)

compiler_module(
    name   = "Polling",
    struct = "polling.ml",
    sig    = "Polling_cmi",
    opts = MODULE_OPTS,
    warnings = [NAME_OUT_OF_SCOPE],
    deps   = [
        ":Mach",
        ":Dataflow",
        ":Cmm",
        "//utils:Numbers",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Array",
    ],
)

compiler_signature(
    name = "Polling_cmi",
    src  = "polling.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Mach_cmi",
        ":Cmm_cmi",
        "//utils:Misc_cmi",
    ],
)

compiler_module(
    name   = "Printcmm",
    struct = "printcmm.ml",
    sig    = "Printcmm_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Cmm",
        ## (Targetint)
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Nativeint",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Format",
        "//lambda:Debuginfo",
        "//utils:Clflags",
        "//middle_end:Backend_var",
        "//stdlib:Stdlib.Array",
    ],
)

compiler_signature(
    name = "Printcmm_cmi",
    src  = "printcmm.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        "//parsing:Asttypes_cmi",
        "//stdlib:Stdlib.Format_cmi",
        "//lambda:Debuginfo_cmi",
    ],
)

compiler_module(
    name   = "Printlinear",
    struct = "printlinear.ml",
    sig    = "Printlinear_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Printmach",
        ":Mach",
        ":Linear",
        ":Cmm",
        "//stdlib:Stdlib.Format",
        "//lambda:Debuginfo",
        "//utils:Clflags",
        "//stdlib:Stdlib.Array",
    ],
)

compiler_signature(
    name = "Printlinear_cmi",
    src  = "printlinear.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Linear_cmi",
        ":Cmm_cmi",
        "//stdlib:Stdlib.Format_cmi",
    ],
)

compiler_module(
    name   = "Printmach",
    struct = "printmach.ml",
    sig    = "Printmach_cmi",
    opts = MODULE_OPTS,
    warnings = [NAME_OUT_OF_SCOPE],
    deps   = [
        "//lambda:Debuginfo",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Nativeint",
        "//stdlib:Stdlib.Printf",
        "//utils:Clflags",
        ":Cmm",
        ":Interval",
        ":Mach",
        ":Printcmm",
        ":Proc",
        ":Reg",
    ],
)

compiler_signature(
    name = "Printmach_cmi",
    src  = "printmach.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Reg_cmi",
        ":Mach_cmi",
        ":Interval_cmi"
    ],
)

compiler_module(
    name   = "Proc",
    struct = select({
        ## supported archs: amd64, arm, arm64, i386, power, riscv, s390x
        ## NB: amd64 == x86_64
        "//config/arch:x86_64": "//asmcomp/amd64:proc.ml",
        "//config/arch:arm"   : "//asmcomp/arm:proc.ml",
        "//config/arch:arm64"   : "//asmcomp/arm64:proc.ml",
        "//config/arch:i386"   : "//asmcomp/i386:proc.ml",
        "//config/arch:ppc"   : "//asmcomp/power:proc.ml",
        "//config/arch:riscv64"   : "//asmcomp/riscv:proc.ml",
        "//config/arch:s390x"   : "//asmcomp/s390x:proc.ml",
    }, no_match_error = "unknown arch"),
    sig    = "Proc_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Arch",
        ":Cmm",
        ":Mach",
        ":Reg",
        ":X86_proc",
    ],
    visibility = [
        # "//asmcomp:__subpackages__"
        "//driver:__pkg__"
    ]
)

compiler_signature(
    name = "Proc_cmi",
    src  = "proc.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Reg_cmi",
        ":Mach_cmi",
        ":Cmm_cmi",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_module(
    name   = "Reg",
    struct = "reg.ml",
    sig    = "Reg_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Cmm",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Set",
        "//stdlib:Stdlib.Map",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Int",
        "//middle_end:Backend_var",
        "//stdlib:Stdlib.Array",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "Reg_cmi",
    src  = "reg.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        "//stdlib:Stdlib.Set_cmi",
        "//stdlib:Stdlib.Map_cmi",
        "//middle_end:Backend_var_cmi",
    ],
)

compiler_module(
    name   = "Reload",
    struct = select({
        "//config/arch:x86_64": "//asmcomp/amd64:reload.ml",
        "//config/arch:arm"   : "//asmcomp/arm:reload.ml",
        "//config/arch:arm64"   : "//asmcomp/arm64:reload.ml",
        "//config/arch:i386"   : "//asmcomp/i386:reload.ml",
        "//config/arch:ppc"   : "//asmcomp/power:reload.ml",
        "//config/arch:riscv64"   : "//asmcomp/riscv:reload.ml",
        "//config/arch:s390x"   : "//asmcomp/s390x:reload.ml",
    }, no_match_error = "unknown arch"),
    sig    = "Reload_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Reloadgen",
        # ":Reg",
        # ":Mach",
        # ":Cmm",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Array",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "Reload_cmi",
    src  = "reload.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Mach_cmi",
        ":Cmm_cmi",
    ],
)

compiler_module(
    name   = "Reloadgen",
    struct = "reloadgen.ml",
    sig    = "Reloadgen_cmi",
    opts = MODULE_OPTS,
    use_prims = True,
    deps   = [
        ":Reg",
        ":Mach",
        ":Cmm",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        ## FIXME: Stdlib.Array should include CamlinternalOO in its
        ## depgraph, so we should not need to list it here.
        "//stdlib:Stdlib.Array",
        "//stdlib:CamlinternalOO",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "Reloadgen_cmi",
    src  = "reloadgen.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Reg_cmi",
        ":Mach_cmi",
        ":Cmm_cmi",
    ],
)


compiler_module(
    name   = "Schedgen",
    struct = "schedgen.ml",
    sig    = "Schedgen_cmi",
    opts = MODULE_OPTS,
    warnings = [NAME_OUT_OF_SCOPE],
    deps   = [
        "//utils:Clflags",
        ":Cmm",
        ":Linear",
        ":Mach",
        ":Proc",
        ":Reg",

        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Array",
        "//stdlib:CamlinternalOO"
        ## (Arch)
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "Schedgen_cmi",
    src  = "schedgen.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Mach_cmi",
        ":Linear_cmi",
        ":Cmm_cmi",
    ],
)

compiler_module(
    name   = "Scheduling",
    struct = select({
        "//config/arch:x86_64": "//asmcomp/amd64:scheduling.ml",
        "//config/arch:arm"   : "//asmcomp/arm:scheduling.ml",
        "//config/arch:arm64"   : "//asmcomp/arm64:scheduling.ml",
        "//config/arch:i386"   : "//asmcomp/i386:scheduling.ml",
        "//config/arch:ppc"   : "//asmcomp/power:scheduling.ml",
        "//config/arch:riscv64"   : "//asmcomp/riscv:scheduling.ml",
        "//config/arch:s390x"   : "//asmcomp/s390x:scheduling.ml",
    }, no_match_error = "unknown arch"),
    sig = "Scheduling_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//asmcomp:Schedgen",
    ],
    visibility = ["//asmcomp:__pkg__"]
)

compiler_signature(
    name = "Scheduling_cmi",
    src  = "scheduling.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Linear_cmi",
        ":Cmm_cmi",
    ],
)

compiler_module(
    name   = "Selection",
    struct = select({
        "//config/arch:x86_64": "//asmcomp/amd64:selection.ml",
        "//config/arch:arm"   : "//asmcomp/arm:selection.ml",
        "//config/arch:arm64"   : "//asmcomp/arm64:selection.ml",
        "//config/arch:i386"   : "//asmcomp/i386:selection.ml",
        "//config/arch:ppc"   : "//asmcomp/power:selection.ml",
        "//config/arch:riscv64"   : "//asmcomp/riscv:selection.ml",
        "//config/arch:s390x"   : "//asmcomp/s390x:selection.ml",
    }, no_match_error = "unknown arch"),
    sig = "Selection_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Cmm",
        ":Mach",
        ":Selectgen",
    ],
    visibility = ["//asmcomp:__pkg__"]
)

compiler_module(
    name   = "Selectgen",
    struct = "selectgen.ml",
    sig    = "Selectgen_cmi",
    opts = MODULE_OPTS,
    warnings = [NAME_OUT_OF_SCOPE],
    deps   = [
        "//stdlib:Stdlib.Int",
        ":Cmm",
        ":Mach",
        ":Proc",
        ":Polling",
        ":Reg",
        "//utils:Numbers",
        "//stdlib:Stdlib.Nativeint",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Int64",
        "//lambda:Debuginfo",
        "//middle_end:Backend_var",
        "//stdlib:Stdlib.Array",
        "//stdlib:CamlinternalOO",
        ## (Arch)
    # ] + select({
    #     "//config/arch:x86_64": [
    #         "//asmcomp/amd64:Proc",
    #     ]
    # }, no_match_error = "unknown arch"),
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "Selectgen_cmi",
    src  = "selectgen.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Reg_cmi",
        ":Mach_cmi",
        ":Cmm_cmi",
        "//utils:Misc_cmi",
        "//lambda:Debuginfo_cmi",
        "//middle_end:Backend_var_cmi",
        "//parsing:Asttypes_cmi",
    ],
)

compiler_signature(
    name = "Selection_cmi",
    src  = "selection.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Mach_cmi",
        ":Cmm_cmi",
        "//utils:Misc_cmi",
    ],
)

compiler_module(
    name   = "Spill",
    struct = "spill.ml",
    sig    = "Spill_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Reg",
        ":Proc",
        ":Mach",
        ":Cmm",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Hashtbl",
        "//utils:Clflags",
        "//stdlib:Stdlib.Array",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
)

compiler_signature(
    name = "Spill_cmi",
    src  = "spill.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Mach_cmi",
        ":Cmm_cmi",
        ":Proc_cmi"
   ],
)

compiler_module(
    name   = "Split",
    struct = "split.ml",
    sig    = "Split_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Reg",
        ":Mach",
        ":Cmm",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Array",
    ],
)

compiler_signature(
    name = "Split_cmi",
    src  = "split.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Mach_cmi",
        ":Cmm_cmi",
    ],
)

compiler_module(
    name   = "Strmatch",
    struct = "strmatch.ml",
    sig    = "Strmatch_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//lambda:Debuginfo",
        "//middle_end:Backend_var",
        "//stdlib:Stdlib.Char",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Map",
        "//stdlib:Stdlib.Nativeint",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Set",
        "//stdlib:Stdlib.String",
        ":Arch",
        ":Cmm",
    ],
)

compiler_signature(
    name = "Strmatch_cmi",
    src  = "strmatch.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        "//parsing:Asttypes_cmi",
        "//lambda:Debuginfo_cmi",
    ],
)

compiler_signature(
    name = "X86_ast_cmi",
    src  = "x86_ast.mli",
    opts = SIG_OPTS + ["-nopervasives"],
)

compiler_module(
    name   = "X86_dsl",
    struct = "x86_dsl.ml",
    sig    = "X86_dsl_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":X86_proc",
        "//stdlib:Stdlib.Int64",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "X86_dsl_cmi",
    src  = "x86_dsl.mli",
    opts = SIG_OPTS + ["-nopervasives"],
    deps   = [
        ":X86_ast_cmi",
    ],
)

compiler_module(
    name   = "X86_gas",
    struct = "x86_gas.ml",
    sig    = "X86_gas_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":X86_proc",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Printf",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Buffer",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "X86_gas_cmi",
    src  = "x86_gas.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib_cmi",
        ":X86_ast_cmi",
    ],
)

compiler_module(
    name   = "X86_masm",
    struct = "x86_masm.ml",
    sig    = "X86_masm_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":X86_proc",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.Buffer",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "X86_masm_cmi",
    src  = "x86_masm.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib_cmi",
        ":X86_ast_cmi",
    ],
)

compiler_module(
    name   = "X86_proc",
    struct = "x86_proc.ml",
    sig    = "X86_proc_cmi",
    opts = MODULE_OPTS,
    warnings = [NAME_OUT_OF_SCOPE],
    deps   = [
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Printf",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Filename",
        "//config:Config",
        "//utils:Clflags",
        "//stdlib:Stdlib.Char",
        "//utils:Ccomp",
        "//stdlib:Stdlib.Buffer",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "X86_proc_cmi",
    src  = "x86_proc.mli",
    opts = SIG_OPTS,
    deps   = [
        ":X86_ast_cmi",
        "//stdlib:Stdlib.Buffer_cmi",
    ],
)

################################################################
################
## ocamloptcomp.[cma,cmxa]
# ASMCOMP = \
#   $(ARCH_SPECIFIC_ASMCOMP) \
#   asmcomp/arch.cmo \
#   ... etc...
# OPTCOMP = $(MIDDLE_END) $(ASMCOMP)
# OPTCOMP_CMI = $(MIDDLE_END_CMI) $(ASMCOMP_CMI)

# compilerlibs/ocamloptcomp.cma: $(OPTCOMP_CMI) $(OPTCOMP)
# 	$(CAMLC) -a -o $@ $(OPTCOMP)

# boot_library(
boot_archive(
    name    = "ocamloptcomp",
    visibility = [
        "//visibility:public",
        # "//testsuite:__pkg__",
    ],
    manifest = [
        "optcomp",
        "//middle_end:ocamlmiddleend" # ocamloptcomp",
    ],
)
